--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div class="main-header">
+   <%= image_tag("idhmc.png", :id=>"idhmc-logo") %>
+   <span>eMOP Dashboard</span>
+   <div style="clear: both"></div>
+</div>
+
 <%= yield %>
 
 </body>
