--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,14 +1,16 @@
 <div id="dashboard-main">
-   
+
    <%= render :partial => 'summary' %>
-   
+
    <div id="results-detail">
-      <%= render :partial => 'paging' %>
-      
       <table id="detail-table">
-         <tr>
-            <th>Data Set</th><th>Work ID</th><th>Title</th><th>Author</th><th>Gale Change Index</th>
-         </tr>
+         <thead>
+            <tr>
+               <th>Data Set</th><th>Work ID</th><th>Title</th><th>Author</th><th>Gale Change Index</th>
+            </tr>
+         </thead>
+         <tbody>
+         </tbody>
       </table>
    </div>
 </div>
