--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,24 +1,19 @@
 <div id="dashboard-main">
-
+<!--
    <%= render :partial => 'summary' %>
-
+-->
    <div id="results-detail">
       <table id="detail-table">
          <thead>
             <tr>
                <th class="narrow-col">Data Set</th>
-               <th class="narrow-col">Work ID</th>
+               <th class="narrow-col">TCP Number</th>
                <th>Title</th>
                <th class="author-col">Author</th>
                <th class="result-col">Gale <span class="small-label">Juxta</span></th>
-               <th class="result-col"><span class="tlogo">T</span> <span class="small-label">Juxta</span></th>
-               <th class="result-col"><span class="glogo">G</span> <span class="small-label">Juxta</span></th>
-               <th class="result-col"><span class="ologo">O</span> <span class="small-label">Juxta</span></th>
-               
+               <th class="result-col">Current <span class="small-label">Juxta</span></th>
                <th class="narrow-col">Gale <span class="small-label">RETAS</span></th>
-               <th class="narrow-col"><span class="tlogo">T</span> <span class="small-label">RETAS</span></th>
-               <th class="narrow-col"><span class="glogo">G</span> <span class="small-label">RETAS</span></th>
-               <th class="narrow-col"><span class="ologo">O</span> <span class="small-label">RETAS</span></th>
+               <th class="result-col">Current <span class="small-label">RETAS</span></th>
             </tr>
          </thead>
          <tbody>
