--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,13 +7,14 @@
          <thead>
             <tr>
                <th class="narrow-col">Data Set</th>
-               <th class="narrow-col">TCP Number</th>
+               <th class="medium-col">TCP Number</th>
                <th>Title</th>
                <th class="author-col">Author</th>
-               <th class="result-col">Gale <span class="small-label">Juxta</span></th>
-               <th class="narrow-col">Gale <span class="small-label">RETAS</span></th>
-               <th class="result-col">Current <span class="small-label">Juxta</span></th>
-               <th class="result-col">Current <span class="small-label">RETAS</span></th>
+               <th class="date-col">OCR Date</th>               
+               <th class="medium-col">OCR Engine</th>
+               <th class="author-col">OCR Batch</th>
+               <th class="result-col">Juxta</th>
+               <th class="result-col">RETAS</th>
             </tr>
          </thead>
          <tbody>
