color code gale rows so they stand out

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -127,6 +127,10 @@
          text-align: center;
       }
       
+      .gale-row {
+         background-color: #cec !important;
+      }
+      
    
       th {
          background-color: #679;
