--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
 <!--
    <%= render :partial => 'summary' %>
 -->
-   <div id="results-detail">
+   <div id="dashboard-detail">
       <table id="detail-table">
          <thead>
             <tr>
