missed checkin of page result show view

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -1,2 +1,24 @@
-<h1>PageDetail#index</h1>
-<p>Find me in app/views/page_detail/index.html.erb</p>
+
+<span id="work-id" style="display:none"><%= @work_id %></span>
+<span id="batch-id" style="display:none"><%= @batch_id %></span>
+
+<div id="results-detail">
+   
+   <a class="dashboard-back" href="/"><< Back To Dashboard</a>
+
+   <table id="pages-table">
+      <thead>
+         <tr>
+            <th class="result-col">Page Number</th>
+            <th class="result-col">Juxta</th>
+            <th class="result-col">RETAS</th>
+         </tr>
+      </thead>
+      <tbody>
+      </tbody>
+   </table>
+   
+   <a  class="dashboard-back"  href="/"><< Back To Dashboard</a>
+
+</div>
+   
