--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -2,6 +2,13 @@
 <span id="work-id" style="display:none"><%= @work_id %></span>
 <span id="batch-id" style="display:none"><%= @batch_id %></span>
 
+<div id="results-summary">
+   <table id="results-summary">
+      <tr><td class="summary-label">Work:</td><td><%= @work_title %></td></tr>
+      <tr><td class="summary-label">Batch:</td><td><%= @batch %></td></tr>     
+   </table>
+</div>
+
 <div id="results-detail">
    
    <a class="dashboard-back" href="/"><< Back To Dashboard</a>
@@ -9,6 +16,7 @@
    <table id="pages-table">
       <thead>
          <tr>
+            <th class="icon-col"></th>
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
