--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,6 @@
 <div id="dashboard-main">
-<!--
-   <%= render :partial => 'summary' %>
--->
    <div id="dashboard-detail">
+      <%= render :partial => 'filter' %>
       <table id="detail-table">
          <thead>
             <tr>
