added a reset button to the results filter

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -99,6 +99,11 @@ a.paginate_disabled_previous {
          width: 75px;
          margin-right: 15px;
       }
+      #filter-reset {
+         position: relative;
+         left: 183px;
+         top: 2px;
+      }
    }
    
    #detail-table {
