--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -10,4 +10,5 @@
       <span class="filter-label">To:</span>
       <input class="date-filter" type="text" id="to-date" />
    </p>
+   <input id="filter-reset" type="button" value="Reset Filter"/>
 </div>
