--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -76,6 +76,11 @@ a.paginate_disabled_previous {
    #dashboard-filter {
       margin: 0px 0px 20px 5px;
    
+      .cb-filter-label {
+         font-size: 0.85em;
+         margin-left: 10px;
+      }
+      
       .filter-label {
          margin-right: 5px;
          font-size: 0.8em;
