--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -20,6 +20,7 @@
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
+            <th class="result-col">Page Image</th>
          </tr>
       </thead>
       <tbody>
