more supporting code for sbs visualizations

--- a/app/views/juxta/show.html.erb
+++ b/app/views/juxta/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Juxta#show</h1>
 <a class="dashboard-back"  href="/results?work=<%= @work_id %>&batch=<%= @batch_id %>"><< Back To Page Results</a>
+
+<%= render :partial => 'wait_popup' %>
