--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,16 @@
    <head>
       <title>EmopDashboard</title>
       <%= stylesheet_link_tag    "application", :media => "all" %>
-      <%= javascript_include_tag "application" %>      
+      <%= javascript_include_tag "application" %>
       <%= csrf_meta_tags %>
+
+      <!-- JUXTA WS integration -->
+      <link href="<%= Settings.juxta_ws_url %>/stylesheets/sidebyside.css" rel="stylesheet" type="text/css">
+      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/jquery.mousewheel.min.js"></script>
+      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/juxta-ws-common.js"></script>
+      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/raphael-min.js"></script>
+      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/sidebyside.js"></script>
+
    </head>
    <body>
 
