push sources to juxta ws

--- a/app/views/juxta/show.html.erb
+++ b/app/views/juxta/show.html.erb
@@ -1,3 +1,6 @@
+<span id="collation-id" style="display: none"><%= @collation_id %></span>
+<span id="collation-status" style="display: none"><%= @collation_status %></span>
+
 <a class="dashboard-back"  href="/results?work=<%= @work_id %>&batch=<%= @batch_id %>"><< Back To Page Results</a>
 
 <%= render :partial => 'wait_popup' %>
