create comparison set from witnesses and set collator config

--- a/app/views/juxta/show.html.erb
+++ b/app/views/juxta/show.html.erb
@@ -1,5 +1,7 @@
 <span id="collation-id" style="display: none"><%= @collation_id %></span>
 <span id="collation-status" style="display: none"><%= @collation_status %></span>
+<span id="work-id" style="display: none"><%= @work_id %></span>
+<span id="batch-id" style="display: none"><%= @batch_id %></span>
 
 <a class="dashboard-back"  href="/results?work=<%= @work_id %>&batch=<%= @batch_id %>"><< Back To Page Results</a>
 
