--- a/app/assets/stylesheets/juxta.css.scss
+++ b/app/assets/stylesheets/juxta.css.scss
@@ -25,6 +25,9 @@
 #page-scroller {
    padding: 10px;
 }
+.witness-text {
+   cursor: default !important;
+}
 
 /*
  * Remainder of juxta / emop dashboard styles
