--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,6 +4,7 @@
       <table id="detail-table">
          <thead>
             <tr>
+               <th class="icon-col"></th>
                <th class="narrow-col">Data Set</th>
                <th class="medium-col">TCP Number</th>
                <th>Title</th>
