added selectboxes to the dashboard

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -87,19 +87,22 @@
    width: 55px;
 }
 .author-col {
-   width: 180px;
+   width: 160px;
 }
 .date-col {
    width: 80px;
 }
 .result-col {
-   width: 50px;
+   width: 45px;
 }
 .result-data {
    text-align: center;
 }
 .icon-col {
    width: 24px;
+}
+.check-col {
+   width: 12px !important;
 }
 .detail-link {
    height:16px;
