--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,7 @@
 <div id="dashboard-main">
    <div id="dashboard-detail">
       <%= render :partial => 'filter' %>
+      <%= render :partial => 'queue_status' %>
       <table id="detail-table">
          <thead>
             <tr>
