stubbing in ui to schedult job and create batch

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,3 +23,7 @@
       </table>
    </div>
 </div>
+
+<%= render :partial => '/common/pick_batch_popup' %>
+<%= render :partial => '/common/new_batch_popup' %>
+<%= render :partial => '/common/wait_popup' %>
