--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -162,3 +162,29 @@
    }
 }
 
+// pipups
+.emop-popup {
+   display:none;
+   font-size: 0.95em;
+   font-weight: 200;
+}
+.ui-dialog-titlebar {
+  font-size: 0.8em;
+  font-weight: 400;
+}
+.ui-button-text {
+  font-size: 0.7em !important;
+}
+.ui-dialog-buttonpane {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+#pick-batch-popup {
+  font-size: 0.8em;
+    
+  .table-label {
+    text-align: right;
+    font-weight: 400;
+  }
+
+}
