--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -184,7 +184,11 @@
     
   .table-label {
     text-align: right;
-    font-weight: 400;
+    font-weight: 300;
+    width: 95px;
+  }
+  .table-data {
+     font-size: 0.85em;
   }
 
 }
