--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -6,8 +6,12 @@
    </p>
    <p>
       <span class="filter-label">Batch</span>
-      <%= select_tag "batch-filter", options_from_collection_for_select(@batches, "id", "name", @batch_filter), {:prompt=>'All'} %>
-   </p>
+      <select id="batch-filter" name="batch-filter">
+         <option value>All</option>
+         <% @batches.each do | batch | %>
+            <option value="<%= batch[:id] %>"><%= batch[:name] %></option>
+         <% end %>
+      </select>
    <p>
       <span class="filter-label">From:</span>
       <input class="date-filter" type="text" id="from-date" value="<%= @from_filter %>"/>
