--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -24,6 +24,9 @@
    </div>
 </div>
 
+<span id="types-json" style="display: none"><%= ActiveSupport::JSON.encode( @job_types ) %></span>
+<span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
+<span id="batch-json" style="display: none"><%= ActiveSupport::JSON.encode( @batches ) %></span>
 <%= render :partial => '/common/pick_batch_popup' %>
 <%= render :partial => '/common/new_batch_popup' %>
 <%= render :partial => '/common/wait_popup' %>
