--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -169,26 +169,37 @@
    font-weight: 200;
 }
 .ui-dialog-titlebar {
-  font-size: 0.8em;
-  font-weight: 400;
+   font-size: 0.8em;
+   font-weight: 400;
 }
 .ui-button-text {
-  font-size: 0.7em !important;
+   font-size: 0.7em !important;
 }
 .ui-dialog-buttonpane {
-  padding: 0 !important;
-  margin: 0 !important;
+   padding: 0 !important;
+   margin: 0 !important;
 }
 #pick-batch-popup {
-  font-size: 0.8em;
+   font-size: 0.8em;
     
-  .table-label {
-    text-align: right;
-    font-weight: 300;
-    width: 95px;
-  }
-  .table-data {
-     font-size: 0.85em;
-  }
+   .table-label {
+      text-align: right;
+      font-weight: 300;
+      width: 95px;
+   }
+   .table-data {
+      font-size: 0.85em;
+   }
+  
+   #font-info {
+      font-size: 0.75em;
+      margin-left: 100px;
+      p {
+         margin:0
+      }
+      .font-data {
+         margin-left: 5px;
+      }
+   }
 
 }
