--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -11,7 +11,10 @@
       </tr>
       <tr class="font-row">
          <td class="table-label">Font:</td>
-         <td class="table-input"><%= select_tag "new-font", options_from_collection_for_select(@fonts, "id", "font_name") %></td>
+         <td class="table-input">
+            <%= select_tag "new-font", options_from_collection_for_select(@fonts, "id", "font_name") %>
+            <span id="no-fonts" style="display:none">No fonts defined</span>
+         </td>
       </tr>
       <%= render :partial => 'font_detail_row' %>
       
