--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,6 +7,7 @@
             <tr>
                <th class="check-col"></th>
                <th class="icon-col"></th>
+               <th class="icon-col"></th>
                <th class="narrow-col">Data Set</th>
                <th class="medium-col">TCP Number</th>
                <th>Title</th>
