--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -5,13 +5,22 @@
       <span class="cb-filter-label">Exclude works with no OCR results</span>
    </p>
    <p>
-      <span class="filter-label">Batch</span>
+      <span class="filter-label">Batch:</span>
       <select id="batch-filter" name="batch-filter">
          <option value>All</option>
          <% @batches.each do | batch | %>
-            <option value="<%= batch[:id] %>"><%= batch[:name] %></option>
+            <option value="<%= batch[:id] %>" <% if @batch_filter.to_i==batch[:id] %>selected<%end%> ><%= batch[:name] %></option>
          <% end %>
       </select>
+   </p>
+   <p>
+      <span class="filter-label">Data Set:</span>
+      <select id="set-filter" name="set-filter" style="width: 192px;">
+         <option value>All</option>
+         <option value="ECCO" <% if @set_filter=="ECCO" %>selected<%end%> >ECCO</option>
+         <option value="EEBO" <% if @set_filter=="EEBO" %>selected<%end%> >EEBO</option>
+      </select>
+   </p>
    <p>
       <span class="filter-label">From:</span>
       <input class="date-filter" type="text" id="from-date" value="<%= @from_filter %>"/>
